# vbd-elasto-sim

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  hess.csv
assets/experiments/01/: color-group-offsets.json  color-groups.json  masses.json  positions.json  tetrahedron-indices.json  triangle-indices.json  vertex-to-tetrahedra-offsets.json  vertex-to-tetrahedra.json
assets/models/bunny/: bunny_tetrahedralized.msh
assets/models/spot/: spot_tetrahedralized.msh
assets/shaders/: debug.comp.glsl  exterior.frag.glsl  exterior.vert.glsl  interior.frag.glsl  interior.vert.glsl  stretch-y.comp.glsl  translate-y.comp.glsl  vbd-0-position-init.comp.glsl  vbd-1-position.comp.glsl  vbd-2-velocity.comp.glsl
include/: Camera.hpp  ComputeShader.hpp  RenderShader.hpp  Transform.hpp  VBDParameterReader.hpp
lib/graphics/include/actor/: Actor.hpp
lib/graphics/include/buffer/: Buffer.hpp  StructuredBuffer.hpp  TriangleBuffer.hpp  VertexBuffer.hpp
lib/graphics/include/camera/: Camera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
lib/graphics/include/light/: Light.hpp
lib/graphics/include/mesh/: Mesh.hpp
lib/graphics/include/model/: Model.hpp
lib/graphics/include/pipeline/: ComputePipeline.hpp  RenderPipeline.hpp
lib/graphics/include/scene/: Scene.hpp
lib/graphics/include/texture/: Texture.hpp
lib/graphics/src/: Texture.cpp
src/: ComputeShader.cpp  RenderShader.cpp  Transform.cpp  main.cpp
test_build/: CMakeCache.txt
tools/: .ruff.toml  parametrize.py  pyproject.toml  tetrahedralize.py
(+9 files in other folders)
